--- a/trailFinder/coming-soon.html
+++ b/trailFinder/coming-soon.html
@@ -7,6 +7,9 @@
      <link rel="stylesheet" href="src/styles/main.css" />
     <link rel="stylesheet" href="src/styles/coming-soon.css" />
     <script src="src/scripts/index.js" type="module"></script>
+    <link rel="icon" type="image/webp" href="src/assets/logo.webp" />
+
+    
   </head>
   <body>
     <nav style="width: 100%"></nav>
