--- a/trailFinder/create-account.html
+++ b/trailFinder/create-account.html
@@ -6,6 +6,8 @@
   <title>Create Account</title>
   <link rel="stylesheet" href="src/styles/create-account.css" />
    <script src="src/scripts/create-account.js" type="module"></script>
+   <link rel="icon" type="image/webp" href="src/assets/logo.webp" />
+
   
 </head>
 <body>
