--- a/trailFinder/index.html
+++ b/trailFinder/index.html
@@ -13,6 +13,8 @@
     <script src="src/scripts/map.js" defer></script>
     <link href="https://api.mapbox.com/mapbox-gl-js/v3.12.0/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.12.0/mapbox-gl.js"></script>
+    <link rel="icon" type="image/webp" href="src/assets/logo.webp" />
+
 </head>
 
 <body class="antialiased">
