--- a/trailFinder/login.html
+++ b/trailFinder/login.html
@@ -6,6 +6,8 @@
     <title>Simple Login</title>
     <link rel="stylesheet" href="src/styles/login.css" />
     <script src="src/scripts/login.js" type="module"></script>
+    <link rel="icon" type="image/webp" href="src/assets/logo.webp" />
+
 </head>
 <body>
   <div class="login-container">
