--- a/trailFinder/login.html
+++ b/trailFinder/login.html
@@ -1,25 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simple Login</title>
     <link rel="stylesheet" href="src/styles/login.css" />
     <script src="src/scripts/login.js" type="module"></script>
     <link rel="icon" type="image/webp" href="src/assets/logo.webp" />
+  </head>
+  <body>
+    <div class="login-container">
+      <h2>Login</h2>
+      <form id="login-form" aria-describedby="message">
+        <label for="username">Username</label>
+        <input
+          type="text"
+          id="username"
+          name="username"
+          placeholder="Username"
+          required
+          autocomplete="username"
+        />
 
-</head>
-<body>
-  <div class="login-container">
-    <h2>Login</h2>
-    <form id="login-form">
-      <input type="text" id="username" placeholder="Username" required />
-      <input type="password" id="password" placeholder="Password" required />
-      <button type="submit" class="login-btn">Login</button>
-      <a href="create-account.html" class="create-account-btn">Create Account</a>
-      <p id="message"></p>
-    </form>
-  </div>
-</body>
-</html>
+        <label for="password">Password</label>
+        <input
+          type="password"
+          id="password"
+          name="password"
+          placeholder="Password"
+          required
+          autocomplete="current-password"
+        />
+
+        <button type="submit" class="login-btn">Login</button>
+        <a href="create-account.html" class="create-account-btn"
+          >Create Account</a
+        >
+
+        <p id="message" aria-live="polite"></p>
+      </form>
+    </div>
+  </body>
 </html>
