added favicon to profile

--- a/trailFinder/profile.html
+++ b/trailFinder/profile.html
@@ -5,7 +5,7 @@
   <title>Your Profile</title>
   <link rel="stylesheet" href="src/styles/profile.css" />
   <script src="src/scripts/profile.js" type="module"></script>
-  
+      <link rel="icon" type="image/webp" href="src/assets/logo.webp" />
 </head>
 <body>
   <div class="profile-container">
