added logout button

--- a/trailFinder/coming-soon.html
+++ b/trailFinder/coming-soon.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coming Soon</title>
-     <link rel="stylesheet" href="src/styles/main.css" />
+    <link rel="stylesheet" href="src/styles/main.css" />
     <link rel="stylesheet" href="src/styles/coming-soon.css" />
-    <script src="src/scripts/index.js" type="module"></script>
+    <script src="src/scripts/main.js" type="module"></script>
     <link rel="icon" type="image/webp" href="src/assets/logo.webp" />
 
     
   </head>
   <body>
-    <nav style="width: 100%"></nav>
+    <nav class="navbar"></nav>
     <main class="coming-soon">
       <div class="coming-card">
         <h1>🚧 Feature In Progress</h1>
