--- a/trailFinder/index.html
+++ b/trailFinder/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="src/styles/index.css" />
     <script src="src/scripts/index.js" type="module"></script>
     <script src="src/scripts/search.js" type="module"></script>
+    <script src="src/scripts/main.js" type="module"></script>
     <link rel="icon" type="image/webp" href="src/assets/logo.webp" />
 </head>
 
