--- a/trailFinder/login.html
+++ b/trailFinder/login.html
@@ -4,41 +4,49 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simple Login</title>
+    <link rel="stylesheet" href="src/styles/main.css" />
     <link rel="stylesheet" href="src/styles/login.css" />
+    <script src="src/scripts/main.js" type="module"></script>
     <script src="src/scripts/login.js" type="module"></script>
     <link rel="icon" type="image/webp" href="src/assets/logo.webp" />
   </head>
   <body>
-    <div class="login-container">
-      <h2>Login</h2>
-      <form id="login-form" aria-describedby="message">
-        <label for="username">Username</label>
-        <input
-          type="text"
-          id="username"
-          name="username"
-          placeholder="Username"
-          required
-          autocomplete="username"
-        />
+    <header>
+        <nav class="navbar"></nav>
+    </header>
+    <main class="login-main">
+      <div class="login-container">
+        <h2>Login</h2>
+        <form id="login-form" aria-describedby="message">
+          <label for="username">Username</label>
+          <input
+            type="text"
+            id="username"
+            name="username"
+            placeholder="Username"
+            required
+            autocomplete="username"
+          />
 
-        <label for="password">Password</label>
-        <input
-          type="password"
-          id="password"
-          name="password"
-          placeholder="Password"
-          required
-          autocomplete="current-password"
-        />
+          <label for="password">Password</label>
+          <input
+            type="password"
+            id="password"
+            name="password"
+            placeholder="Password"
+            required
+            autocomplete="current-password"
+          />
 
-        <button type="submit" class="login-btn">Login</button>
-        <a href="create-account.html" class="create-account-btn"
-          >Create Account</a
-        >
+          <button type="submit" class="login-btn">Login</button>
+          <a href="create-account.html" class="create-account-btn"
+            >Create Account</a
+          >
 
-        <p id="message" aria-live="polite"></p>
-      </form>
-    </div>
+          <p id="message" aria-live="polite"></p>
+        </form>
+      </div>
+    </main>
+    <footer></footer>
   </body>
 </html>
