added header and footer to profile

--- a/trailFinder/profile.html
+++ b/trailFinder/profile.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8" />
   <title>Your Profile</title>
   <link rel="stylesheet" href="src/styles/profile.css" />
+    <link rel="stylesheet" href="src/styles/main.css" />
   <script src="src/scripts/profile.js" type="module"></script>
-      <link rel="icon" type="image/webp" href="src/assets/logo.webp" />
+  <script src="src/scripts/main.js" type="module"></script>
+  <link rel="icon" type="image/webp" href="src/assets/logo.webp" />
 </head>
 <body>
+  <nav></nav>
   <div class="profile-container">
     <h2>Account Info</h2>
     <img src="src/assets/logo.webp" alt="Profile picture" class="profile-avatar" />
@@ -20,5 +23,6 @@
     <button id="back-home">Back to Home</button>
   </div>
   <script src="src/scripts/profile.js" type="module"></script>
+  <footer></footer>
 </body>
 </html>
